force-app/main/default/objects/fboost__B_Log__c/fboost__B_Log__c.object-meta.xml
<CustomObject>
    <description>Boost log</description>
    <label>Boost Log</label>
    <nameField>
        <displayFormat>Log-{YYYY}-{MM}-{DD}-{0}</displayFormat>
        <label>Boost Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Boost Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>