force-app/main/default/objects/fboost__B_Log__c/fields/fboost__ClassName__c.field-meta.xml
<CustomField>
    <fullName>fboost__ClassName__c</fullName>
    <description>Related Class name</description>
    <externalId>true</externalId>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>