force-app/main/default/objects/fboost__B_Log__c/fields/fboost__CreationTime__c.field-meta.xml
<CustomField>
    <fullName>fboost__CreationTime__c</fullName>
    <label>Creation Time</label>
    <type>DateTime</type>
</CustomField>