force-app/main/default/objects/fboost__B_Log__c/fields/fboost__Details__c.field-meta.xml
<CustomField>
    <fullName>fboost__Details__c</fullName>
    <description>Additional information</description>
    <label>Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>