force-app/main/default/objects/fboost__B_Log__c/fields/fboost__MethodName__c.field-meta.xml
<CustomField>
    <fullName>fboost__MethodName__c</fullName>
    <description>Related Apex method name</description>
    <externalId>true</externalId>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>