force-app/main/default/objects/fboost__B_Log__c/listViews/fboost__Errors.listView-meta.xml
<ListView>
    <fullName>fboost__Errors</fullName>
    <columns>NAME</columns>
    <columns>fboost__CreationTime__c</columns>
    <columns>fboost__ClassName__c</columns>
    <columns>fboost__MethodName__c</columns>
    <columns>fboost__Type__c</columns>
    <columns>fboost__ErrorMessage__c</columns>
    <columns>fboost__ExceptionName__c</columns>
    <columns>fboost__ExceptionStackTrace__c</columns>
    <columns>fboost__Details__c</columns>
    <columns>fboost__ContextUserId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>fboost__Type__c</field>
        <operation>equals</operation>
        <value>error</value>
    </filters>
    <label>Errors</label>
</ListView>